@startuml
!include style.puml
skinparam arrowThickness 1.1
skinparam arrowColor MODEL_COLOR
skinparam classBackgroundColor MODEL_COLOR

Package Person <<Rectangle>>{
class UniquePersonList
class Person
class Name
class Phone
class Email
class Telegram
class Tag
}

UniquePersonList --> "*" Person
Person *--> "1" Name
Person *--> "0...1" Phone
Person *--> "0...1" Email
Person *--> "0...1" Telegram
Person *--> "*" Tag

Name -[hidden]right-> Phone
Phone -[hidden]right-> Telegram
Telegram -[hidden]right-> Email
@enduml
